Correctly align result paragraphs

--- a/src/Components/Output/Output.css
+++ b/src/Components/Output/Output.css
@@ -36,4 +36,5 @@
 {
   margin-block-start: 0px;
   margin-block-end: 0px;
+  align-self: center;
 }
